--- a/views/partials/header.css
+++ b/views/partials/header.css
@@ -3,4 +3,7 @@
   font-size: 19px;
   color: rgb(210, 138, 112);
 }
-.p,.h5 {color: brown;}
+
+.p, .h5 {
+  color: brown;
+}/*# sourceMappingURL=header.css.map */
