--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,6 +1,22 @@
 * {
-  font-family: sans-serif;
-  font-size: 19px;
-  color: rgb(210, 138, 112);
+  font-size: 30px;
+  text-decoration: underline;
+  color: rgb(9, 132, 132);
 }
-.p,.h5 {color: brown;}
+
+.btn-outline-success {
+  --bs-btn-color: #198754;
+  --bs-btn-border-color: #198754;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #878319;
+  --bs-btn-hover-border-color: #198754;
+  --bs-btn-focus-shadow-rgb: 25, 135, 84;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #198754;
+  --bs-btn-active-border-color: #198754;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #198754;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #198754;
+  --bs-gradient: none;
+}/*# sourceMappingURL=style.css.map */
