--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=p, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/bootstrap.css" />
     <script defer src="./CSS/bootstrap-5.3.2/dist/js/bootstrap.js"></script>
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
     <title>Document</title>
   </head>
   <body>
     <header class="header"><%- include("./partials/header.ejs") %></header>
-    <p class="p navbar-brand">Очень мало кода написано</p>
+    <p class="p">Очень мало кода написано</p>
     <h5 class="h5">H5</h5>
   </body>
 </html>
