--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -19,4 +19,4 @@
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #198754;
   --bs-gradient: none;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=index.css.map */
