--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=p, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/bootstrap.css" />
     <script defer src="./CSS/bootstrap-5.3.2/dist/js/bootstrap.js"></script>
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="CSS/index.css" />
     <title>Document</title>
   </head>
   <body>
