--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=p, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/bootstrap.css" />
-    <script defer src="./CSS/bootstrap-5.3.2/dist/js/bootstrap.js"></script>
-    <link rel="stylesheet" href="CSS/index.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header class="header"><%- include("./partials/header.ejs") %></header>
-    <p class="p">Очень мало кода написано</p>
-    <h5 class="h5">H5</h5>
-  </body>
-</html>
+<!-- <h1><%= message %></h1> -->
+<!-- <h2><%= error.status %></h2> -->
+<!-- <pre><%= error.stack %></pre> -->
+<p>тут ошибка</p>
