--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-<%#- include ('./partials/menu') %>
+<%- include ('./partials/menu') %>
 <%#- include ('./partials/messages') %>
 <%# entries.forEach((entry)=>{ %>
     <div class="card entry" style="width: 66rem;">
