--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/bootstrap.css" />
   </head>
   <body>
-    <%#- include ('./partials/menu') %>
+    <%- include ('./partials/menu') %>
     <h1><%= title %></h1>
     <p>Заполните форму ниже чтобы зарегистрироваться</p>
     <%#- include ('./partials/messages') %>
