--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -2,7 +2,7 @@
     <div class="nav navbar-nav ">
    <% if (locals.user) { %> 
 <div  id="menu"> <%#   меню пользователей выполнивших вход%>
- <span class="name"><%= user.email %> </span>  <%#   user.name для браузера то что пользователь послал в requeste%>
+ <span class="name"><%= locals.user.name %> </span>  <%#   user.name для браузера то что пользователь послал в requeste%>
 <a class="badge rounded-pill bg-primary " href="/post" aria-current="page">Post<span class="visually-hidden">(current)</span></a>
 <a class="badge rounded-pill bg-warning " href="/logout">Logout</a>
 </div>
