--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -11,6 +11,7 @@
     <div class="container">
 <%- include ('./partials/menu') %>
 <%#- include ('./partials/messages') %>
+<p>Записи пользователей</p>
 <% entries.forEach((entry)=>{ %>
     <div class="card entry" style="width: 66rem;">
         <div class="card-body ">
