--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -11,7 +11,7 @@
     <%- include ('./partials/menu') %>
     <h1><%= title %></h1>
     <p>Заполните форму ниже чтобы зарегистрироваться</p>
-    <%#- include ('./partials/messages') %>
+    <%- include ('./partials/messages') %>
     <div class="container">
       <form action="/login" method="post">
         <div class="mb-3 row">
