--- a/views/registerForm.ejs
+++ b/views/registerForm.ejs
@@ -9,9 +9,9 @@
   </head>
   <body>
     <%- include ('./partials/menu') %>
-    <h1><%#= title %></h1>
+    <h1><%= title %></h1>
     <p>Заполните форму ниже чтобы зарегистрироваться</p>
-    <%#- include ('./partials/messages') %>
+    <%- include ('./partials/messages') %>
     <div class="container">
       <form action="/register" method="post">
         <div class="mb-3 row">
