пишем message и validation

--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
 <%- include ('./partials/menu') %>
-<%#- include ('./partials/messages') %>
+<%- include ('./partials/messages') %>
 <% entries.forEach((entry)=>{ %>
     <div class="card entry" style="width: 66rem;">
         <div class="card-body ">
