+google auoth2 all works

--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -21,6 +21,17 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="mb-3 row">
+        <div class="offset-sm-4 col-sm-8">
+          <a href="/auth/google">
+            <button value="Google" class="btn btn-warning">
+              Войти через Google
+            </button>
+          </a>
+        </div>
+      </div>
+    </div>
     <p>Заполните форму ниже чтобы войти</p>
     <%- include ('./partials/messages') %>
     <div class="container">
