--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -16,7 +16,7 @@
       <div class="mb-3 row">
         <div class="offset-sm-4 col-sm-8">
           <a href="/auth/yandex">
-            <button class="btn btn-primary">Яндекс вход</button>
+            <button class="btn btn-warning">Яндекс вход</button>
           </a>
         </div>
       </div>
@@ -25,7 +25,16 @@
       <div class="mb-3 row">
         <div class="offset-sm-4 col-sm-8">
           <a href="/auth/google">
-            <button class="btn btn-warning">Google вход</button>
+            <button class="btn">Google вход</button>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="mb-3 row">
+        <div class="offset-sm-4 col-sm-8">
+          <a href="/auth/vkontakte">
+            <button class="btn btn-primary">VK вход</button>
           </a>
         </div>
       </div>
