--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -40,6 +40,15 @@
       </div>
     </div>
     <div class="container">
+      <div class="mb-3 row">
+        <div class="offset-sm-4 col-sm-8">
+          <a href="/auth/github">
+            <button class="btn btn-primary">Github</button>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
       <form action="/login" method="post">
         <div class="mb-3 row">
           <label for="inputName" class="col-4 col-form-label"
