passport js // confirm

--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -3,8 +3,8 @@
     <% if (locals.user) { %>
     <div id="menu">
       <%# меню пользователей выполнивших вход%>
-      <span class="name"><%= locals.user.name || user.displayName %> </span> <%#
-      user.name для браузера то что пользователь послал в requeste%>
+      <span class="name"><%= locals.user.name %> </span> <%# user.name для
+      браузера то что пользователь послал в requeste%>
       <a class="badge rounded-pill bg-primary" href="/post" aria-current="page"
         >Post<span class="visually-hidden">(current)</span></a
       >
